--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-/.phpunit.cache
 /node_modules
 /public/build
 /public/hot
 /public/storage
+/public/media
 /storage/*.key
 /vendor
+/stubs
 .env
 .env.backup
 .env.production
+.phpunit.result.cache
 Homestead.json
 Homestead.yaml
 auth.json
